# Caverne_aux_jeux

./: .gitignore  Changelog.md  LICENSE  Makefile  README.md  README_fr.md  ToDoList.txt  build_requirements.txt  compteur de lignes.py  main.py  main.spec  pyproject.toml  requirements.txt  setup.cfg  test_requirements.txt
.github/workflows/: ci.yml
Fantome/: Fantome_main.py
Flappy_Bird/: Flappy_Bird_main.py
Minesweeper/: minesweeper.py
Pendu/: pendu.py
Pong/: Pong_main.py
Reseau/: client.py  data  server.py  statistics
Scoreboard/: scoreboard.py
Snake/: Snake_main.py
Stats/: Page_selection.py  Page_stat.py
Tete_chercheuse/: tete_chercheuse.py
Tete_chercheuse/image/: mur.ppm
Tetris/: tetris.py
Vectors/: vector.py
app/: compteur_de_lignes.py  main.py
app/Data/: mots.txt
app/Fantome/: Fantome_main.py  fantome_main.py
app/Flappy_Bird/: Flappy_Bird_main.py  flappy_bird_main.py
app/Minesweeper/: minesweeper.py
app/Pendu/: pendu.py
app/Pendu/ressources/: liste_francais.txt
app/Pong/: Pong_main.py
app/Reseau/: client.py  server.py
app/Reseau/data_players/: data  statistics
app/Scoreboard/: scoreboard.py
app/Snake/: Snake_main.py
app/Stats/: Page_selection.py  Page_stat.py
app/Tete_chercheuse/: data.py  tete_chercheuse.py
app/Tetris/: tetris.py  tiles.py
app/Utils/: utils.py
app/Vectors/: vector.py
app/flappy_bird/: flappy_bird_main.py
docker/: Dockerfile  docker-compose.yml
docs/: Changelog.md  developer_guide.md  developer_guide_fr.md  style.css  user_guide.md  user_guide_fr.md
(+3 files in other folders)
